# CppLibraries

./: .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE
doc/: README.md
doc/result/: Readme.md
examples/result/: example.cpp
lib/: result.hpp
test/: test_result.cpp
